--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
         </h3>
         <p class="mt-4 max-w-2xl text-xl leading-7 text-gray-500 mx-auto ta">
           Fotos aleatorias de zorros, cargadas usando lazy loading. <br>
-          Fotos creadas: <span id="accountant">0</span>
+          Fotos creadas: <span class="accountant" id="accountant">0</span> <br>
+          Fotos descargadas: <span class="accountant" id="download">0</span>
+          <br> Agregar cuadro de carga, un cuadrado que carga al agregarlo y luego la imagen carge encima del cuadrado
         </p>
         <section class="app__container">
           <div class="controls">
