Borré un texto indeceado

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
           Fotos aleatorias de zorros, cargadas usando lazy loading. <br>
           Fotos creadas: <span class="accountant" id="accountant">0</span> <br>
           Fotos descargadas: <span class="accountant" id="download">0</span>
-          <br> Agregar cuadro de carga, un cuadrado que carga al agregarlo y luego la imagen carge encima del cuadrado
+          <!-- <br> Agregar cuadro de carga, un cuadrado que carga al agregarlo y luego la imagen carge encima del cuadrado -->
         </p>
         <section class="app__container">
           <div class="controls">
