deploy: 34117643ed9bceb4c5336e010920d538d091069e

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-snowpack-app"
     />
     <!--
-      Snowpack will replace https://frangardev.github.io/lazy-foxy/ with the value you have for `baseUrl` in `snowpack.config.js`.
+      Snowpack will replace https://frangardev.com/lazy-foxy/ with the value you have for `baseUrl` in `snowpack.config.js`.
       Make sure to update it with your GitHub Page URL. https://<your-username>.github.io/<your-repo-name>
 
       More about config options:
@@ -18,7 +18,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://frangardev.github.io/lazy-foxy/_dist_/index.css"
+      href="https://frangardev.com/lazy-foxy/_dist_/index.css"
     />
     <title>Lazy Foxy</title>
   </head>
@@ -54,6 +54,6 @@
     </div>
 
     <!-- Add more scripts here -->
-    <script type="module" src="https://frangardev.github.io/lazy-foxy/_dist_/index.js"></script>
+    <script type="module" src="https://frangardev.com/lazy-foxy/_dist_/index.js"></script>
   </body>
 </html>
